force-app/main/default/objects/ScriptRule__c/ScriptRule__c.object-meta.xml
<CustomObject>
    <label>Regra do Script</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Script Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regras do Script</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>