force-app/main/default/objects/ScriptRule__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>