force-app/main/default/objects/ScriptRule__c/fields/FieldAPI__c.field-meta.xml
<CustomField>
    <fullName>FieldAPI__c</fullName>
    <description>Campo que contemplará a API do Campo que a regra utilizará.</description>
    <label>API do Campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>