force-app/main/default/objects/ScriptRule__c/fields/FilterBy__c.field-meta.xml
<CustomField>
    <fullName>FilterBy__c</fullName>
    <description>Campo que contemplará as possibilidades de filtro que o usuário poderá escolher quando o critério for direcionado para um objeto relacionado.</description>
    <label>Filtrar por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <label>Nenhum registro</label>
            </value>
            <value>
                <fullName>allRecords</fullName>
                <label>Todos registros</label>
            </value>
            <value>
                <fullName>oneRecord</fullName>
                <label>Pelo menos um</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>