force-app/main/default/objects/ScriptRule__c/fields/ObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPI__c</fullName>
    <description>Campo que contemplará a API do Objeto que a regra terá como base.</description>
    <label>API do Objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>