force-app/main/default/objects/ScriptRule__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Campo que contemplará as possíveis operações que o usuário poderá selecionar ao criar a regra do script.</description>
    <label>Operador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>startsWith</fullName>
                <label>começa com</label>
            </value>
            <value>
                <fullName>contains</fullName>
                <label>contém</label>
            </value>
            <value>
                <fullName>equals</fullName>
                <label>igual a</label>
            </value>
            <value>
                <fullName>greaterOrEqual</fullName>
                <label>maior ou igual</label>
            </value>
            <value>
                <fullName>greaterThan</fullName>
                <label>maior que</label>
            </value>
            <value>
                <fullName>lessOrEqual</fullName>
                <label>menor ou igual</label>
            </value>
            <value>
                <fullName>lessThan</fullName>
                <label>menor que</label>
            </value>
            <value>
                <fullName>doesNotContains</fullName>
                <label>não contém</label>
            </value>
            <value>
                <fullName>notEqualsTo</fullName>
                <label>diferente de</label>
            </value>
            <value>
                <fullName>itHas</fullName>
                <label>possui</label>
            </value>
            <value>
                <fullName>doesntHave</fullName>
                <label>não possui</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>