force-app/main/default/objects/ScriptRule__c/fields/RuleNumber__c.field-meta.xml
<CustomField>
    <fullName>RuleNumber__c</fullName>
    <label>Número da Regra</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>