force-app/main/default/objects/ScriptRule__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <label>Aviso</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Regras do Script</relationshipLabel>
    <relationshipName>Regras_do_Script</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>