force-app/main/default/objects/ScriptRule__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Valor a ser Comparado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>